change github link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <header>
         <div>
-            <img src="https://github.com/luandersondev.png" alt="Imagem de Luanderson">
+            <img src="https://github.com/luandersonalvesdev.png" alt="Imagem de Luanderson">
         </div>
     </header>
     
