--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
                             <img src="https://static-cdn.jtvnw.net/ttv-boxart/743-285x380.jpg" alt="Imagem do jogo Chess">
                         </a>
                     </li>
+                    <li>
+                        <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/VALORANT">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-285x380.jpg" alt="Imagem do jogo valorant">
+                        </a>
+                    </li>
+                    <li>
+                        <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Teamfight%20Tactics">
+                            <img src="https://static-cdn.jtvnw.net/ttv-boxart/513143-285x380.jpg" alt="Imagem do jogo Team Fight Tatics">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -105,24 +119,28 @@
                         <a 
                             target="_blank"
                             href="https://www.twitch.tv/luaoderson">
-                            <svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M21.2824 25H15.8426C15.6011 25.0001 15.3678 25.0844 15.1852 25.2375L9.28125 30V25H6.1875C5.914 25 5.65169 24.8946 5.4583 24.7071C5.2649 24.5196 5.15625 24.2652 5.15625 24V6C5.15625 5.73478 5.2649 5.48043 5.4583 5.29289C5.65169 5.10536 5.914 5 6.1875 5H26.8125C27.086 5 27.3483 5.10536 27.5417 5.29289C27.7351 5.48043 27.8438 5.73478 27.8438 6V19.5375C27.8417 19.6832 27.8072 19.8267 27.7427 19.9583C27.6782 20.0899 27.5851 20.2065 27.4699 20.3L21.9398 24.7625C21.7572 24.9156 21.5239 24.9999 21.2824 25V25Z" stroke="#9A35FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M21.6562 11V17" stroke="#9A35FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M15.4688 11V17" stroke="#9A35FF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                                
+                            <svg height="32px" width="32px" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><circle cx="256" cy="256" fill="#ffffff" r="256" class="fill-6441a5"></circle><path d="M256 189.5V273h-27.9v-83.5H256zm76.5 0V273h-27.9v-83.5h27.9zm0 146.1 48.7-48.8V133.9H151.6v201.7h62.7v41.7l41.7-41.7h76.5zM409.1 106v194.8l-83.5 83.5h-62.7L221.2 426h-41.7v-41.7H103V161.6l21-55.6h285.1z" fill="#2a2634" class="fill-ffffff"></path></svg>
                         </a>
                     </li>
                     <li>
                         <a 
                             target="_blank"
                             href="https://www.instagram.com/luaodev/">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M16 21C18.7614 21 21 18.7614 21 16C21 13.2386 18.7614 11 16 11C13.2386 11 11 13.2386 11 16C11 18.7614 13.2386 21 16 21Z" stroke="#FA41FE" stroke-width="2" stroke-miterlimit="10"/>
-                                <path d="M21.5 4.5H10.5C7.18629 4.5 4.5 7.18629 4.5 10.5V21.5C4.5 24.8137 7.18629 27.5 10.5 27.5H21.5C24.8137 27.5 27.5 24.8137 27.5 21.5V10.5C27.5 7.18629 24.8137 4.5 21.5 4.5Z" stroke="#FA41FE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M22.5 11C23.3284 11 24 10.3284 24 9.5C24 8.67157 23.3284 8 22.5 8C21.6716 8 21 8.67157 21 9.5C21 10.3284 21.6716 11 22.5 11Z" fill="#FA41FE"/>
-                            </svg>
-                                
+                            <svg height="32px" width="32px" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 32 32"><linearGradient gradientTransform="rotate(-60 -857.1 520.09) scale(32.0053)" gradientUnits="userSpaceOnUse" id="a" x1="0" x2="1" y1="32" y2="32"><stop offset="0" stop-color="#ffffff" class="stop-color-fec053"></stop><stop offset=".327" stop-color="#ffffff" class="stop-color-f2203e"></stop><stop offset=".648" stop-color="#ffffff" class="stop-color-b729a8"></stop><stop offset="1" stop-color="#ffffff" class="stop-color-5342d6"></stop></linearGradient><path d="M16 0c8.8 0 16 7.2 16 16s-7.2 16-16 16S0 24.8 0 16 7.2 0 16 0z" fill="url(#a)" class="fillurl(-a)"></path><path d="M20.7 6h-9.5C8.3 6 6 8.4 6 11.4v9.2c0 2.9 2.3 5.3 5.3 5.4h9.5c2.9 0 5.3-2.4 5.3-5.4v-9.2C26 8.4 23.7 6 20.7 6zm3.5 14.5c0 2-1.6 3.7-3.7 3.7h-9.1c-2 0-3.7-1.7-3.6-3.7v-9c0-2 1.6-3.7 3.6-3.7h9.1c2 0 3.7 1.7 3.7 3.7v9z" fill="#2a2634" class="fill-ffffff"></path><path d="M16 10.9c-2.8-.1-5.2 2.2-5.2 5-.1 2.8 2.2 5.2 5 5.2s5.2-2.2 5.2-5V16c.1-2.8-2.2-5.1-5-5.1zm0 8.4a3.4 3.4 0 0 1-3.4-3.2c0-1.8 1.4-3.3 3.2-3.4s3.3 1.4 3.4 3.2v.1c.1 1.8-1.4 3.3-3.2 3.3zM21.3 9.4c.6 0 1.1.5 1.1 1.2s-.5 1.2-1.1 1.2-1.1-.5-1.1-1.2.5-1.2 1.1-1.2z" fill="#2a2634" class="fill-ffffff"></path></svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            target="_blank"
+                            href="https://www.linkedin.com/in/luandersonalvesdev">
+                            <svg height="32px" width="32px" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><circle cx="256" cy="256" fill="#ffffff" r="256" class="fill-0077b5"></circle><path d="M186.8 371.7h-51.9V204.1h51.9v167.6zm-26.2-189.5c-16.9 0-30.7-13.8-30.7-30.9 0-17.1 13.7-30.9 30.7-30.9 16.9 0 30.7 13.8 30.7 30.9 0 17-13.8 30.9-30.7 30.9zm220.6 189.5h-51.6v-88c0-24.1-9.2-37.6-28.2-37.6-20.8 0-31.6 14-31.6 37.6v88H220V204.1h49.8v22.6s15-27.7 50.5-27.7 61 21.7 61 66.6c-.1 44.9-.1 106.1-.1 106.1z" fill="#2a2634" class="fill-ffffff"></path></svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a 
+                            target="_blank"
+                            href="https://www.github.com/luandersonalvesdev">
+                            <svg height="32px" width="32px" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><circle cx="256" cy="256" fill="#ffffff" r="256" class="fill-333333"></circle><path d="M256 93.9c-89.5 0-162.1 72.6-162.1 162.1 0 70.5 45 130.4 107.8 152.8.3.1 1.4.5 1.7.6.9.3 1.9.5 2.9.5 5.3 0 9.5-4.3 9.5-9.5v-29c-10.3 2.1-25.9 4.1-34.4 0-11-5.3-16.6-12.1-21.9-25.5-6.6-16.3-21.8-20.8-22.4-23.6-.6-2.9 16.1-7.2 24.7 2.7 8.6 9.9 17.3 29.7 35.8 27.8 9.1-.9 15-2.4 18.7-3.5.7-6.4 2.8-14.3 8.1-19.9-43.5-7.2-72.5-30.6-72.5-76.5 0-20.9 6-37.1 16.6-49.2-1.8-10-4.8-33.2 3.2-41.3 0 0 11.3-7 43.7 15.8 12.1-2.8 25.5-4.2 39.8-4.2h1.6c14.4.1 27.8 1.5 39.8 4.2 32.4-22.8 43.7-15.8 43.7-15.8 8 8.2 5 31.4 3.2 41.3 10.6 12.2 16.6 28.4 16.6 49.2 0 45.9-28.9 69.3-72.5 76.5 8.3 8.7 8.6 22.8 8.6 28.6v42.5c0 5.3 4.3 9.5 9.5 9.5.8 0 1.5-.1 2.3-.3.2 0 .8-.2 1-.3 63.5-22 109.1-82.3 109.1-153.3 0-89.7-72.6-162.2-162.1-162.2z" fill="#2a2634" class="fill-ffffff"></path></svg>
                         </a>
                     </li>
                 </ul>
